FUNCION BorrarVueltas y Finalizar EVENTO FUNCIONA
Se han añadido 2 funciones: la primer permite eliminar cualquier vuelta manteniendo apretado sovbre un item completo. La segunda permite finalizar evento, esto hace que el evento quede en "gris" y el supervisor pueda visualizar los datos de entrega y retiro de artículos sin usar obviamente funciones como Editar, guardar, agregar nueva vuelta, eliminar vuelta, etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,8 @@
 
     <string name="action_editar_vuelta"> Editar Vuelta </string>
 
+    <string name="action_finish_evento"> Finalizar Evento</string>
+
 
 
 
