--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,11 +30,11 @@
     <!-- Strings related to login -->
     <string name="title_activity_login">Ingresar</string>
 
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Usuario</string>
 
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Contraseña</string>
 
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Iniciar Sesión</string>
 
     <string name="action_sign_in_short">Sign in</string>
 
