Validaciones campos_activity nuevo_responsable
Validaciones en los campos: fechas, codigo area_ telefono y otros. Falta hacer más pruebas al codigo de area y telefono, y sobre todo falta el del correo.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,13 @@
 
 
 
+    <!--Activity: NuevoResponsableParaPatrocinio -->
+
+    <string name="edittext_hint">
+
+        <font size="16">(Obligatorio)</font>
+
+    </string>
 
 
 
