--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,12 +53,6 @@
     <string name="title_activity_ventas__por__patrocinio">Ventas_Por_Patrocinio</string>
 
 
-
-
-
-
-
-
     <!--//////////////////////////Values Strings para Supervisores//////////////////////////////-->
 
 
@@ -81,17 +75,11 @@
     <string name="nombre_transicion_imagen">imagen_compartida</string>
 
 
-
-
-
-
-
     <!--MainActivity y su respectivo Menu-->
 
     <string name="action_entrega_retiro_envases_patrocinio">Patrocinio</string>
 
     <string name="action_agregar_cliente">Nuevo Cliente </string>
-
 
 
     <!--Menu: buscar_responsable_para_patrocinio.xml -->
@@ -101,7 +89,6 @@
     <string name="action_save_changes_erep">Guardar Cambios</string>
 
     <string name="action_editar_item_evento">Editar Evento</string>
-
 
 
     <!--Menu: filtros_gasto_en_combustible.xml -->
@@ -137,12 +124,9 @@
     </string>
 
 
-
-
     <string name="title_activity_buscar_responsable_para_patrocinio">
         BuscarResponsableParaPatrocinio
     </string>
-
 
 
     <!--Activity: NuevoResponsableParaPatrocinio -->
@@ -152,7 +136,7 @@
         <font size="16">(Obligatorio)</font>
 
     </string>
-
+    <string name="title_activity_datos_personales_responsable">DatosPersonalesResponsable</string>
 
 
 </resources>
