--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,9 @@
 
     <!--//////////////////////////Values Strings para Supervisores//////////////////////////////-->
 
+    <string name="access_tokens">pk.eyJ1IjoibW9udGllbGp1YW5wYWJsbyIsImEiOiJjazdiejhrdWIwMmQ2M29vNXEzaHpjcWJ6In0.QMFTnIJ9ABqLlIPlF52GFw</string>
+
+
 
     <!--Cargas_Descargas Activity y su respectivo Menu-->
 
@@ -117,6 +120,8 @@
 
     <string name="action_finish_evento"> Finalizar Evento</string>
 
+    <string name="action_avaible_evento"> Habilitar Evento</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <!-- <string name="hello_blank_fragment">Hello blank fragment</string> -->
@@ -137,6 +142,8 @@
 
     </string>
     <string name="title_activity_datos_personales_responsable">DatosPersonalesResponsable</string>
+    <string name="title_activity_mapa">Mapa</string>
+    <string name="title_activity_mapa__supervisores">Mapa_Supervisores</string>
 
 
 </resources>
