--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
+    <string name="access_token_repartidor" translatable="false">sk.eyJ1IjoibW9udGllbGp1YW5wYWJsbyIsImEiOiJjazdra210cHMwMHZnM2RvMjA5cGh3Mmc4In0.UXJXSfAOyOaFs_1m8fFIeQ</string>
+    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
+    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
+
+
     <!--Strings menu-->
     <string name="action_settings">Settings</string>
 
@@ -55,8 +60,7 @@
 
     <!--//////////////////////////Values Strings para Supervisores//////////////////////////////-->
 
-    <string name="access_tokens">pk.eyJ1IjoibW9udGllbGp1YW5wYWJsbyIsImEiOiJjazdiejhrdWIwMmQ2M29vNXEzaHpjcWJ6In0.QMFTnIJ9ABqLlIPlF52GFw</string>
-
+    <string name="access_tokens_supervisor">pk.eyJ1IjoibW9udGllbGp1YW5wYWJsbyIsImEiOiJjazdiejhrdWIwMmQ2M29vNXEzaHpjcWJ6In0.QMFTnIJ9ABqLlIPlF52GFw</string>
 
 
     <!--Cargas_Descargas Activity y su respectivo Menu-->
@@ -144,6 +148,16 @@
     <string name="title_activity_datos_personales_responsable">DatosPersonalesResponsable</string>
     <string name="title_activity_mapa">Mapa</string>
     <string name="title_activity_mapa__supervisores">Mapa_Supervisores</string>
+    <string name="title_activity_prueba__mapa__repartidores">Prueba_Mapa_Repartidores</string>
+    <string name="title_activity_frecuencia__de__consumo">Frecuencia_De_Consumo</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
 </resources>
