--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,21 @@
     <string name="title_activity_ventas__por__patrocinio">Ventas_Por_Patrocinio</string>
 
 
+    <!-- Valores claves de Cadenas para Mapas de Repartidor y Supervisor -->
+
+    <string name="tap_on_map_instruction">Algo tiene que decir</string>
+
+    <string name="tap_on_marker_instruction">Algo tiene que decir</string>
+
+    <string name="descripcion">Rejas negras</string>
+
+    <string name="tracking_enabled">Rastreo habilitado</string>
+
+    <string name="tracking_already_enabled">Rastreo listo</string>
+
+    <string name="current_location">Ubicación actual</string>
+
+
     <!--//////////////////////////Values Strings para Supervisores//////////////////////////////-->
 
     <string name="access_tokens_supervisor">pk.eyJ1IjoibW9udGllbGp1YW5wYWJsbyIsImEiOiJjazdiejhrdWIwMmQ2M29vNXEzaHpjcWJ6In0.QMFTnIJ9ABqLlIPlF52GFw</string>
