último commit: PATROCINIO
Se ha hecho lo siguiente:

1) Para NUEVO EVENTO
*) validacion de campos
*) boludeces como cambiar color (si es repartidor o supervisor) de los edittext, cuadro de dialogo, etc.
*) Se ha creado un ArrayList para guardar el nombre y apellido del responsable en un ListView. Al crear un Item_Evento (es decir, un nuevo responsable) automáticamente, el nombre y el apellido del responsable se guardan en un ListView y es posible buscarlos en el SearchView.

2) EntregaRetiroPatrocinio
*) También algunas boludeces, como cambio de colores bla bla

3) Nuevo Responsable:
*) Funciona bien la función de validación de todo los campos. Creo que esta activity ya está terminada.

4)VerDatosPersonalesResponsable

*) Se ha hecho unos pequeños cambios pero nada importante. Esta es otra activity que creo que ya está terminada.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,13 +153,24 @@
     </string>
 
 
+
+
+    <!--Activity: DatosPersonalesResponsable -->
+
+    <string name="mensaje_datos_personales_fecha_fin">Si desea cambiar la fecha de fin estimada primero debe modificar la fecha de inicio del evento</string>
+
+
+
+
     <!--Activity: NuevoResponsableParaPatrocinio -->
 
     <string name="edittext_hint">
-
         <font size="16">(Obligatorio)</font>
-
     </string>
+
+
+
+
     <string name="title_activity_datos_personales_responsable">DatosPersonalesResponsable</string>
     <string name="title_activity_mapa">Mapa</string>
     <string name="title_activity_mapa__supervisores">Mapa_Supervisores</string>
