Carga_descarga_cambios_importantes
Se agrego el cambio de colores cuando se cierran las tandas (colores grises) y también se añadió un botón de "Habilitar tandas". Faltan arreglar boludeces, pero lo más importante está hecho

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,10 @@
 
     <string name="action_editar_tanda">Editar Tandas</string>
 
+    <string name="action_avaible_tanda">Habilitar Tandas</string>
+
+
+
     <!--Envases Activity-->
 
     <string name="title_activity_envases"></string>
