--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,6 @@
     <string name="action_avaible_tanda">Habilitar Tandas</string>
 
 
-
     <!--Envases Activity-->
 
     <string name="title_activity_envases"></string>
@@ -157,13 +156,9 @@
     </string>
 
 
-
-
     <!--Activity: DatosPersonalesResponsable -->
 
     <string name="mensaje_datos_personales_fecha_fin">Si desea cambiar la fecha de fin estimada primero debe modificar la fecha de inicio del evento</string>
-
-
 
 
     <!--Activity: NuevoResponsableParaPatrocinio -->
@@ -171,8 +166,6 @@
     <string name="edittext_hint">
         <font size="16">(Obligatorio)</font>
     </string>
-
-
 
 
     <string name="title_activity_datos_personales_responsable">DatosPersonalesResponsable</string>
@@ -188,6 +181,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_navigation_repartidores">NavigationRepartidores</string>
 
 
 </resources>
